Implement multi-provider support for AI calls, including OpenAI, Anthropic, Gemini, Mistral, Groq, and DeepSeek. Enhance error handling and response parsing, and add command line options for limiting PDF file processing. Update requirements.txt to include new dependencies and change OpenAI default model to gpt-4o.

--- a/providers_config.json
+++ b/providers_config.json
@@ -32,7 +32,7 @@
     },
     {
       "name": "openai",
-      "default_model": "gpt-3.5-turbo",
+      "default_model": "gpt-4o",
       "api_key_env": "OPENAI_API_KEY"
     }
   ]
