--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 PyPDF2
-openai
+openai>=1.0.0
 python-dotenv>=1.0.0
 pydantic
 tqdm
 tenacity>=8.2.0
-litellm>=1.10.0
 requests>=2.28.0
+google-generativeai>=0.3.0
+anthropic>=0.5.0
+mistral>=0.1.0
+groq>=0.3.0
+deepseek>=0.0.1
