Refactor Gemini model selection logic to prioritize configuration settings and improve fallback mechanisms. Enhance literature review synthesis by incorporating in-text citations and clarifying structure. Update default model in configuration for better compatibility.

--- a/providers_config.json
+++ b/providers_config.json
@@ -2,7 +2,7 @@
   "providers": [
     {
       "name": "gemini",
-      "default_model": "gemini-2.0-flash-thinking-exp-01-21",
+      "default_model": "models/gemini-1.5-pro-latest",
       "api_key_env": "GEMINI_API_KEY"
     },
     {
